--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,30 +1,21 @@
 <!-- Footer -->
 <footer class="footer page-footer font-small blue pt-4">
-
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
-
     <!-- Grid row -->
     <div class="row">
-
       <!-- Grid column -->
       <div class="col-md-8 mt-md-0 mt-3">
-
         <!-- Content -->
         <h5 class="text-uppercase">Just Be Human</h5>
-        <p>Just Be Human is run by a 501(c)3 non-profit and is entirely donation-funded. As part of our commitment to transparency, we publish our operating costs daily. If you'd like to donate, you can learn more by following the footer links. </p>
-
+        <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. As part of our commitment to transparency, we publish our operating costs daily. If you'd like to donate, you can learn more by following the footer links. </p>
       </div>
       <!-- Grid column -->
-
       <hr class="clearfix w-100 d-md-none pb-3">
-
       <!-- Grid column -->
       <div class="col-md-3 mb-md-0 mb-3">
-
         <!-- Links -->
         <h5 class="text-uppercase">Links</h5>
-
         <ul class="list-unstyled">
           <li>
             <a href="/costs">View Month-to-date Costs</a>
@@ -35,21 +26,15 @@
           <li>
             <a href="/aboutus">Learn more about us</a>
           </li>
-
         </ul>
-
       </div>
       <!-- Grid column -->
-
     </div>
     <!-- Grid row -->
-
   </div>
   <!-- Footer Links -->
-
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> Copyright: Just Being Human</div>
   <!-- Copyright -->
-
 </footer>
 <!-- Footer -->
