--- a/app/views/layouts/application-test.html.erb
+++ b/app/views/layouts/application-test.html.erb
@@ -1,68 +1,119 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Sticky Footer Way</title>
-    <link rel='stylesheet' href='style.css'>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('favicon.ico') %>
+    <title>Multistep Registration Form- Demo Preview</title>
+    <meta content="noindex, nofollow" name="robots">
+    <!-- Including CSS File Here -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!-- Including JS File Here -->
+    <script src="multi_step_form.js" type="text/javascript">
+      /*------------Validation Function-----------------*/
+      var count = 0; // To count blank fields.
+      function validation(event) {
+      var radio_check = document.getElementsByName('gender'); // Fetching radio button by name.
+      var input_field = document.getElementsByClassName('text_field'); // Fetching all inputs with same class name text_field and an html tag textarea.
+      var text_area = document.getElementsByTagName('textarea');
+      // Validating radio button.
+      if (radio_check[0].checked == false && radio_check[1].checked == false) {
+      var y = 0;
+      } else {
+      var y = 1;
+      }
+      // For loop to count blank inputs.
+      for (var i = input_field.length; i > count; i--) {
+      if (input_field[i - 1].value == '' || text_area.value == '') {
+      count = count + 1;
+      } else {
+      count = 0;
+      }
+      }
+      if (count != 0 || y == 0) {
+      alert("*All Fields are mandatory*"); // Notifying validation
+      event.preventDefault();
+      } else {
+      return true;
+      }
+      }
+      /*---------------------------------------------------------*/
+      // Function that executes on click of first next button.
+      function next_step1() {
+      document.getElementById("first").style.display = "none";
+      document.getElementById("second").style.display = "block";
+      document.getElementById("active2").style.color = "red";
+      }
+      // Function that executes on click of first previous button.
+      function prev_step1() {
+      document.getElementById("first").style.display = "block";
+      document.getElementById("second").style.display = "none";
+      document.getElementById("active1").style.color = "red";
+      document.getElementById("active2").style.color = "gray";
+      }
+      // Function that executes on click of second next button.
+      function next_step2() {
+      document.getElementById("second").style.display = "none";
+      document.getElementById("third").style.display = "block";
+      document.getElementById("active3").style.color = "red";
+      }
+      // Function that executes on click of second previous button.
+      function prev_step2() {
+      document.getElementById("third").style.display = "none";
+      document.getElementById("second").style.display = "block";
+      document.getElementById("active2").style.color = "red";
+      document.getElementById("active3").style.color = "gray";
+      }
+    </script>
   </head>
   <body>
-    <main class='wrapper'>
-      <div id="modal-holder"></div>
-
-
-      <body>
-        <%= render 'layouts/navbar' %>
-        <%= render 'layouts/alerts' %>
-
-        <%= yield %>
-      </body>
-      <div class='push'></div>
-    </main>
-    <footer class='footer'><%= render 'layouts/footer' %></footer>
+    <div class="content">
+      <!-- Multistep Form -->
+      <div class="main">
+        <form action="#" class="regform" method="get">
+          <!-- Progressbar -->
+          <ul id="progressbar">
+            <li id="active1">Create Account</li>
+            <li id="active2">Educational Profiles</li>
+            <li id="active3">Personal Details</li>
+          </ul>
+          <!-- Fieldsets -->
+          <fieldset id="first">
+            <h2 class="title">Create your account</h2>
+            <p class="subtitle">Step 1</p>
+            <input class="text_field" name="email" placeholder="Email" type="text" value="">
+            <input class="text_field" name="pass" placeholder="Password" type="password" value="">
+            <input class="text_field" name="cpass" placeholder="Confirm Password" type="password" value="">
+            <input id="next_btn1" onclick="next_step1()" type="button" value="Next">
+          </fieldset>
+          <fieldset id="second">
+            <h2 class="title">Educational Profiles</h2>
+            <p class="subtitle">Step 2</p>
+            <select class="options">
+              <option>--Select Education--</option>
+              <option>Post Graduate</option>
+              <option>Graduate</option>
+              <option>HSC</option>
+              <option>SSC</option>
+            </select>
+            <input class="text_field" name="marks" placeholder="Marks Obtained" type="text" value="">
+            <input class="text_field" name="pyear" placeholder="Passing Year" type="text" value="">
+            <input class="text_field" name="univ" placeholder="University" type="text">
+            <input id="pre_btn1" onclick="prev_step1()" type="button" value="Previous">
+            <input id="next_btn2" name="next" onclick="next_step2()" type="button" value="Next">
+          </fieldset>
+          <fieldset id="third">
+            <h2 class="title">Personal Details</h2>
+            <p class="subtitle">Step 3</p>
+            <input class="text_field" name="fname" placeholder="First Name" type="text">
+            <input class="text_field" name="lname" placeholder="Last Name" type="text">
+            <input class="text_field" name="cont" placeholder="Contact" type="text">
+            <label>Gender</label>
+            <input name="gender" type="radio" value="Male">Male
+            <input name="gender" type="radio" value="Female">Female
+            <textarea name="address" placeholder="Address"></textarea>
+            <input id="pre_btn2" onclick="prev_step2()" type="button" value="Previous">
+            <input class="submit_btn" onclick="validation(event)" type="submit" value="Submit">
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Just Be Human</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('favicon.ico') %>
-  </head>
-
-  <div id="modal-holder"></div>
-
-
-  <body>
-    <%= render 'layouts/navbar' %>
-    <%= render 'layouts/alerts' %>
-
-    <%= yield %>
-  </body>
-
-  <%= render 'layouts/footer' %>
-</html>
-
