--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,47 +1,37 @@
-
-
-
-<div class="aboutus-title">
-  <h1>A little about us...</h1>
+<div class="aboutus-community-guidelines">
+  <h2 class="guidelines-title">Community Guidelines</h2>
+  <div class="guidelines">
+    <div class="guideline">
+      <b>First:</b> Be excellent to each other.
+    </div>
+    <div class="guideline">
+      <b>Second:</b> See rule #1.
+    </div>
+    <div class="guideline">
+      <b>Third:</b> Using the platform for the purposes of direct or indirect financial gain is not allowed. (See Rule #2)
+    </div>
+  </div>
 </div>
-
-<div class="aboutus-list">
-  <ul>
-    <li>
-      <div class="aboutus-item">
-        <h3>What do we hope to achieve?</h3>
-        <p>
-          Put simply, Just Be Human hopes to bring volunteerism and local activism into the 21st century, and in doing so, to remind people that humans are overwhelmingly hard-working, caring, and kind.
-        </p>
-      </div>
-    </li>
-    <li>
-      <div class="aboutus-item">
-        <h3>Why is the company a nonprofit?</h3>
-        <p>
-          We are aiming to provide a public service. This concept, from the beginning, was not designed to be profitable- it is designed to provide a service that people find valuable. Hopefully, people will find it valuable enough to donate and keep the servers warm and our lights running!
-        </p>
-      </div>
-    </li>
-    <li>
-      <div class="aboutus-item">
-        <h3>What do you do with my personal information?</h3>
-        <p>
-          As part of our commitment to providing a public service, we do not want to profit off of your personal information. In the tech industry at large, you- specifically, your personal information- are the product. We believe that this is one of the worst precedents of the modern world, and refuse to participate in it. We do not use any analytics software, ad trackers, or do any behind-the-scenes collection of your information. Those of you with ad-blockers will notice that they aren't doing anything on our website. That's because there is nothing to block! Any information that we collect will be used entirely for internal purposes and will NEVER be sold, disseminated, or shared with any third party. EVER.
-        </p>
-      </div>
-    </li>
-    <li>
-      <div class="aboutus-item">
-        <h3>Who is Just Be Human?</h3>
-        <p>
-          I don't know why I keep using the royal we... I guess it sounds more professional than saying "I" everywhere. In a nutshell, I'm a software developer who has been working in the industry for a few years and who is sick and tired of seeing the power and potential of software go underutilized. My jobs thus far have been almost entirely based on the sale and use of personal information for advertising purposes and it was making it harder and harder to look at myself in the mirror every morning. This is my way of using software to give back to the world... also, it's a great excuse to write some original code! I got into software development so I could build cool stuff- and if you ask me, this qualifies. The fact that it could be a force for change in the world is a nice bonus too!
-        </p>
-        <p>
-          The idea for Just Be Human has been percolating in my mind for the last year and a half, but the moment that I knew I had to make it happen was when the #trashtagchallenge social media movement went viral. It was at that moment that I realized how badly people wanted a way to make a difference in their local community- they just weren't sure how to organize effectively. This is my attempt to build a platform that solves this problem.
-        </p>
-      </div>
-    </li>
-  </ul>
-  <div class="aboutus-bottom-padding"></div>
+<div class="aboutus">
+  <div class="aboutus-item">
+    <h3>What do you do with my personal information?</h3>
+    <p>
+      It's very simple: nothing. Just Be Human is completely ad-free. Those of you with ad blockers may have noticed already. We will never use your information for any purpose other than for the sole purpose of operating and improving the platform. 
+      <p class="side-note">
+        <small>Side note- if you don't use an ad blocker, you should! We have a recommendation: <a href="https://www.eff.org/privacybadger">Privacy Badger</a>, created by the Electronic Frontier Foundation.</small>
+      </p>
+    </p>
+  </div>
+  <div class="aboutus-item">
+    <h3>What do we hope to achieve?</h3>
+    <p>
+      Just Being Human hopes to bring community activism into the 21st century. In doing so, we want to remind people that humans are overwhelmingly hard-working, caring, and kind. The internet has brought the planet together, but pushed communities apart. We want to start bringing people back together again where it counts- the real world.
+    </p>
+  </div>
+  <div class="aboutus-item">
+    <h3>Why a nonprofit?</h3>
+    <p>
+      Just Be Human is a public service. To that end, Just Be Human will always be free - <em>truly free</em> - for individuals. We believe that companies should be transparent and aim to hold ourselves as an example. We will be publishing all operating costs in as close to real time as we can.
+    </p>
+  </div>
 </div>
