--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -9,7 +9,7 @@ $enable-responsive-font-sizes: true;
 
 
 html, body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif !important;
   height: 100vh;
   margin: 0;
 }
