--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -4,27 +4,94 @@
 @import 'theme.scss';
 @import 'mixins.scss';
 
+//
+//
+//
+//
+//
+//
+//
+//
 // LANDING PAGE STYLE
-.landing-lead {
-  font-size: 4em;
-
+.landing-title {
+  font-size: 3.5em;
+  text-align: center;
   @include respond-to(handhelds) {
-    font-size: 2.2em;
+    font-size: 1.9em;
   }
+
+  margin-top: 3vh;
 }
 
-.landing-how-block {
+.landing-beta-tag {
+  color: $limegreen;
+}
+
+.landing-title-2 {
+  font-size: 4em;
+  font-weight: 700;
+  text-align: center;
+  color: $darkgrey;
+  @include respond-to(handhelds) {
+    font-size: 2.4em;
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+  border-bottom: 2px solid $lightgrey;
+  margin-left: 20vw;
+  margin-right: 20vw;
+}
+
+.landing-subtitle {
+  margin-top: 5vh;
+  margin-left: 10vw;
+  text-align: left !important;
+  font-size: 1.8em;
+  text-align: center;
+  font-weight: 550;
+}
+
+.landing-explanation {
   margin-top: 2vh;
+  text-align: center;
+  @include respond-to(handhelds) {
+    margin-left: 10vw;
+    margin-right: 10vw;
+  }
+
+  margin-left: 20vw;
+  margin-right: 20vw;
 }
 
-.landing-page.jumbotron {
-  margin-bottom: 0;
+.landing-explanation-basic {
+  font-size: 1.2em;
+  margin-top: 2vh;
+  // @include respond-to(handhelds) {
+  //   font-size: 0.6em;
+  // }
 }
+
+.landing-explanation-detail {
+  @include respond-to(handhelds) {
+    font-size: 0.6em;
+  }
+  
+  font-size: 0.8em;
+  margin-top: 1vh;
+}
+
+.landing-explanation-padding {
+  margin-top: 5vh;
+}
+
+.landing-padding-middle {
+  margin-top: 10vh;
+}
+
 
 .beta-disclaimer {
   padding-left: 2vw;
   margin-top: 6vh;
-
   @include respond-to(handhelds) {
     padding: 2vh 6vw;
   }
@@ -34,6 +101,17 @@
   margin-top: 2vh;
 }
 
+
+
+//
+//
+//
+//
+//
+//
+//
+//
+//
 // ====HOME PAGE STYLES=====
 
 .home-page {
@@ -254,6 +332,13 @@
 
 
 
+//
+//
+//
+//
+//
+//
+//
 // ========DONATE PAGE STYLING========
 
 
@@ -315,18 +400,76 @@
 .donation-booleans {
   padding-top: 6vh;
 }
+
+
+
+//
+//
+//
+//
+//
+// ABOUT US STYLING
 .aboutus-title {
   padding-left: 1vw;
   padding-top: 2vw;
 }
 
-.aboutus-list {
-  padding-right: 1vw;
-  padding-top: 3vw;
+.aboutus-community-guidelines {
+  margin-top: 3vh;
+  margin-left: 5vh;
+  margin-right: 5vh;
+  border: 6px solid $limegreen;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 70vh;
+  margin: 3vh auto !important;
+}
+
+.guidelines-title {
+  padding-top: 1vh;
+  text-align: center;
+
+  font-weight: 700;
+  order: 0;
+  border-bottom: 1px solid $lightgrey;
+}
+
+.guidelines {
+  text-align: center;
+  margin-top: 2vh;
+  margin-bottom: 1vh;
+}
+
+.guideline {
+  margin-left: 5vw;
+  margin-right: 5vw;
+  margin-bottom: 2vh;
+  font-size: 1.3em;
+}
+
+.aboutus {
+  @media (max-width: 800px) {
+    margin-left: 5vw !important;
+    margin-right: 5vw !important;
+  }
+  padding-top: 5vh;
+  text-align: center;
+  margin-left: 20vw;
+  margin-right: 20vw;
+}
+
+.aboutus-item {
+  margin-bottom: 5vh;
 }
 
 .aboutus-bottom-padding {
   height: 3vw;
+}
+
+.side-note {
+  margin-left: 5vw;
 }
 
 
