--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -367,22 +367,22 @@
 }
 
 .donation-frame {
-  // overflow-y: scroll;
-  // width: 100vw;
-  // height: 100vh;
+  overflow-y: scroll;
+  width: 100vw;
+  height: 100vh;
   margin-left: auto;
   margin-right: auto;
 }
 
-#regForm {
-  width: 100% !important;
-  margin: 0px !important;
-  padding: 0px !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  margin-top: 10vh !important;
-  min-width: 400px !important;
-}
+// #regForm {
+//   width: 100% !important;
+//   margin: 0px !important;
+//   padding: 0px !important;
+//   margin-left: auto !important;
+//   margin-right: auto !important;
+//   margin-top: 10vh !important;
+//   min-width: 400px !important;
+// }
 
 .donation-email-input {
   font-size: 2em;
